# resource-bound

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
resource-bound/: CHANGELOG.md  Cargo.toml  README.md
resource-bound-core/: Cargo.toml  README.md
resource-bound-core/src/: lib.rs
resource-bound-derive/: Cargo.toml  README.md
resource-bound-derive/src/: lib.rs  outer_attr.rs
resource-bound/src/: lib.rs
test_only/: Cargo.toml
test_only/src/: main.rs
