[package]
name = "resource-bound-derive"
version = "0.1.3"
edition = "2024"
description = "Compile-time enforcement of struct size limits and heap allocation constraints"
readme = "README.md"
license = "MIT"
repository = "https://github.com/oOp995/resource-bound"
documentation = "https://docs.rs/resource-bound"
homepage = "https://github.com/oOp995/resource-bound"

include=[
    "src/**",
    "Cargo.toml",
    "README.md",
]

[lib]
proc-macro=true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1.0.105"
resource-bound-core="0.1.2" #publishing
##dev only resource-bound-core={path="../resource-bound-core"} 
