
[package]
name = "resource-bound"
version = "0.1.2"
edition = "2024"

description = "Compile-time enforcement of struct size limits and heap allocation constraints"
readme = "README.md"
license = "MIT"
repository = "https://github.com/oOp995/resource-bound"
documentation = "https://docs.rs/resource-bound"
homepage = "https://github.com/oOp995/resource-bound"

keywords = [
    "proc-macro",
    "compile-time",
    "memory",
    "heap",
    "no-std"
]

categories = [
    "development-tools::procedural-macro-helpers",
    "memory-management"
]

authors = ["Ossama Abboud <ossama.abboud95@gmail.com>"]


[dependencies]
##resource-bound-derive ="0.1.2" #publishing
##resource-bound-core="0.1.2" #publishing 

resource-bound-derive={path="../resource-bound-derive"} ###dev only
resource-bound-core={path="../resource-bound-core"}     ###dev only

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


